--- a/aulaapi-UI/src/app/app.component.html
+++ b/aulaapi-UI/src/app/app.component.html
@@ -20,12 +20,11 @@
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-table [value]="categorias">
+      <p-table [value]="categorias" [responsive]="true">
         <ng-template pTemplate="header">
           <tr>
             <th class="col-id-header">#</th>
             <th>Nome da Categoria</th>
-            <th class="col-acoes-header"></th>
             <th class="col-acoes-header"></th>
           </tr>
         </ng-template>
@@ -34,10 +33,8 @@
             <td class="col-id">{{cat.id}}</td>
             <td>{{cat.nome}}</td>
             <td class="col-acoes">
-              <button pButton icon="pi pi-pencil"></button>
-            </td>
-            <td class="col-acoes">
-              <button pButton icon="pi pi-trash"></button>
+              <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></button>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
             </td>
           </tr>
         </ng-template>
